# substack-mcp-plus

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_TEST_CHECKLIST.md  CLAUDE_DESKTOP_TEST_GUIDE.md  CONTRIBUTING.md  Dockerfile  FINAL_FIX_SUMMARY.md  ISSUE_FIXES_SUMMARY.md  ISSUE_FIXES_SUMMARY_FINAL.md  LICENSE  README.md  SECURITY.md  cursor_config.json  package-lock.json  package.json  pyproject.toml  setup.sh  setup_auth.py  substack-mcp-plus-1.0.0.tgz  substack-mcp-test-report.md  test_simple_mcp.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker-build-push.yml  npm-publish.yml
docs/: CLAUDE_CODE_PERSPECTIVE.md  CONFIRMATION_SYSTEM.md  COVERAGE_REPORT.md  ERROR_HANDLING_FIXES.md  FEATURES.md  KNOWN_ISSUES.md  QUICKSTART.md  README.md  ROADMAP.md  TESTING.md  TEST_INSTALLATION.md  TODO.md  TROUBLESHOOTING.md  VISION.md  authentication.md  claude_desktop_test_checklist.md  formatting.md  testing_guide.md
examples/: README.md  claude-desktop-config.json
examples/advanced/: formatted-post-with-images.md
examples/basic/: simple-post.md
examples/cli/: direct-usage.md
ops/: deploy-docker-hub.sh  publish-npm.sh
scripts/: postinstall.js
src/: __init__.py  auth_manager.py  index.js  server.py  server_mcp.py  setup.js  simple_auth_manager.py
src/converters/: __init__.py  block_builder.py  html_converter.py  markdown_converter.py
src/handlers/: __init__.py  auth_handler.py  image_handler.py  post_handler.py
src/tools/: __init__.py  create_draft_post.js  create_formatted_post.py  debug_post_structure.py  list_drafts.py  publish_post.py  update_post.py  upload_image_tool.py
src/utils/: __init__.py  api_wrapper.py
tests/: README.md  __init__.py  test_confirmation_simple.py  test_new_tools.py  test_partial_updates.py  test_post_handler_validation.py  test_simple_auth_manager.py
tests/integration/: __init__.py  fixed_comprehensive_test.py  full_test_post.py  test_absolute_minimal.py  test_after_outage.py  test_api_format.py  test_api_response.py  test_ast_fix.py  test_claude_desktop_integration.py  test_client_methods.py  test_code_block_fix.py  test_code_fix.py  test_compare_working_post.py  test_debug_body.py  (+48 more)
venv312/: pyvenv.cfg
(+12 files in other folders)
